# cast-tool

./: Jenkinsfile  README.md  docker-compose.yml  install.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
cast_autosec/: config.example.yaml  jenkinsfile.py
cast_autosec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jenkins/: Dockerfile
