[tool.setuptools.package-data]
"cast_autosec" = ["config.example.yaml"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cast-autosec"
version = "0.1.0"
description = "Automated DevSecOps pipeline bootstrapper for CAST AutoSec"
authors = [{name="CAST AutoSec", email="noreply@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "reportlab>=4.1.0",
    "docker>=7.0.0",
    "gitpython>=3.1.43",
    "jenkinsapi>=0.3.13",
    "pypdf>=4.2.0"
]

[project.scripts]
cast-autosec = "cast_autosec.cli:main"
